--- a/src/main/webapp/WEB-INF/views/addUser.html
+++ b/src/main/webapp/WEB-INF/views/addUser.html
@@ -34,15 +34,15 @@
 						<div class="col-md-8">
 							<div class="row">
 								<div class="form-group col-md-6">
-									<label for="firtsName">First name:</label> <input type="text"
-										class="form-control" id="firtsName" placeholder="First name"
-										th:field="*{firstName}" />
+									<label for="firtsname">First name:</label> <input type="text"
+										class="form-control" id="firtsname" placeholder="First name"
+										th:field="*{firstname}" />
 								</div>
 
 								<div class="form-group col-md-6">
-									<label for="lastName">Last name:</label> <input type="text"
-										class="form-control" id="lastName" placeholder="Last name"
-										th:field="*{lastName}" />
+									<label for="lastname">Last name:</label> <input type="text"
+										class="form-control" id="lastname" placeholder="Last name"
+										th:field="*{lastname}" />
 								</div>
 							</div>
 
