--- a/src/main/webapp/WEB-INF/views/workItem/createWorkItem.html
+++ b/src/main/webapp/WEB-INF/views/workItem/createWorkItem.html
@@ -41,10 +41,9 @@
 
           <div class="row">
             <div class="form-group col-md-6">
-              <label for="exampleInputEmail1">Tilldelad</label> 
-              <select class="form-control">
-                <option>Erik Eriksson</option>
-                <option>Erik Eriksson</option>
+              <label for="assignedToUserId">Tilldelad</label> 
+              <select class="form-control" id="assignedToUserId" th:field="*{assignedToUserId}">
+                <option th:each="user : ${allUsers}" th:value="${user.id}" th:text="${user.firstname + ' ' + user.lastname}">Erik Eriksson</option>
               </select>
             </div>
 
