--- a/src/main/webapp/WEB-INF/views/workItem/viewWorkItem.html
+++ b/src/main/webapp/WEB-INF/views/workItem/viewWorkItem.html
@@ -34,16 +34,16 @@
           <fieldset>
             <div class="row">
               <div class="form-group col-md-6">
-                <label for="title">Titel</label> <input type="text" class="form-control"
-                  placeholder="Titel" th:field="*{title}" />
+                <label for="title">Titel</label> 
+                <input type="text" class="form-control" placeholder="Titel" th:field="*{title}" th:readonly="${view}"/>
                 <div th:if="${#fields.hasErrors('title')}">
                   <p th:errors="*{title}">Incorrect Title</p>
                 </div>
               </div>
   
               <div class="form-group col-md-6">
-                <label for="status">Ärendestatus:</label> 
-                <select class="form-control" id="status" th:field="*{status}">
+                <label for="status">Ärendestatus</label> 
+                <select class="form-control" id="status" th:field="*{status}" th:disabled="${view}">
                   <option th:value="${T(com.taskkeeper.core.domain.WorkItemStatus).CLOSED}">Avslutad</option>
                   <option th:value="${T(com.taskkeeper.core.domain.WorkItemStatus).OPEND}">Pågående</option>
                   <option th:value="${T(com.taskkeeper.core.domain.WorkItemStatus).DONE}">Utförd</option>
@@ -53,7 +53,7 @@
 
             <div class="form-group">
               <label for="description">Beskrivningen</label>
-              <textarea class="form-control" rows="6" placeholder="Beskrivningen" th:field="*{description}"></textarea>
+              <textarea class="form-control" rows="6" placeholder="Beskrivningen" th:field="*{description}" th:readonly="${view}"></textarea>
               <div th:if="${#fields.hasErrors('description')}">
                 <p th:errors="*{description}">Incorrect description</p>
               </div>
@@ -62,15 +62,15 @@
             <div class="row">
               <div class="form-group col-md-6">
                 <label for="assignedToUserId">Tilldelad</label> 
-                <select class="form-control" id="assignedToUserId" th:field="*{assignedToUserId}">
+                <select class="form-control" id="assignedToUserId" th:field="*{assignedToUserId}" th:disabled="${view}">
                   <option th:each="user : ${allUsers}" th:value="${user.id}"
                     th:text="${user.firstname + ' ' + user.lastname}">Erik Eriksson</option>
                 </select>
               </div>
 
               <div class="form-group col-md-6">
-                <label for="doDate">Senast klar</label> <input type="text" class="form-control"
-                  placeholder="2014-03-27" th:field="*{doDate}" />
+                <label for="doDate">Senast klar</label> 
+                <input type="text" class="form-control" placeholder="2014-03-27" th:field="*{doDate}" th:readonly="${view}" />
                 <div th:if="${#fields.hasErrors('doDate')}">
                   <p th:errors="*{doDate}">Incorrect doDate</p>
                 </div>
@@ -80,22 +80,35 @@
           </fieldset>
 
           <p>
-            <button type="submit" class="btn btn-primary">Spara</button>
-            <button type="button" class="btn btn-primary">Redigera</button>
+            <button type="submit" class="btn btn-primary" th:disabled="${view}">Spara</button>
+            <!--  <button type="button" class="btn btn-primary"></button> -->
+            <a class="btn btn-primary" role="button" href="/viewWorkItem" th:href="@{'/viewWorkItem/' + *{id} + '/edit'}">Redigera</a>
             <button type="button" class="btn btn-danger">Säng ärendet</button>
           </p>
         </form>
 
+        <p> </p>
+        
+        <form method="POST" th:action="@{'/addCommentToWorkItem/' + ${workItemInfo.id}}" th:object="${workItemComment}">
+               
+          <div class="form-group">
+            <label for="comment">Kommentar</label>
+            <textarea class="form-control" rows="6" placeholder="Kommentar" th:field="*{comment}"></textarea>
+            <div th:if="${#fields.hasErrors('comment')}">
+              <p th:errors="*{comment}">Incorrect description</p>
+            </div>
+          </div>
 
-        <p>
-          <button type="button" class="btn btn-info">+ Tillfoga kommentar</button>
-        </p>
-
-        <div class="well well-sm">
           <p>
-            <b>Kommentar</b> 2014-03-27
+            <button type="submit" class="btn btn-info">+ Tillfoga kommentar</button>
           </p>
-          Test
+        </form>
+
+        <div class="well well-sm" th:each="item : ${workItemInfo.comments}">
+          <p>
+            <b>Kommentar</b> <span th:text="${#dates.format(item.createDate, 'yyyy-MM-dd')}">2014-03-27</span>
+          </p>
+          <span th:text="${item.comment}">Test</span>
         </div>
 
 
